--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 		
 		<input class="buttom" type="submit" value="Sign in" />
 	</fieldset>
+	
+		<input class="buttom" type="Log in" value="Log in" />
+	</fieldset>
+	
 </form>
 
 </body>
